# bsu_game_project

./: .gitignore  CMakeLists.txt  README.md  car.cpp  car.h  cars.qrc  explosion_animation.qrc  fire_animation.qrc  images.qrc  main.cpp  main_window.cpp  main_window.h  map_data.qrc  maps.qrc  menu.cpp  menu.h  other_images.qrc  shooting_animation.qrc  sounds.qrc  view.cpp  view.h
Preparing image tool/: CMakeLists.txt  coords.txt  main.cpp  uploaded_image.cpp  uploaded_image.h
helpers/: vec2f.cpp  vec2f.h  vec_geometry.cpp  vec_geometry.h  vector_2.cpp  vector_2.h
maps/: moscow.txt  paris.txt
qrc/: main_images.qrc  map_data.qrc  other_images.qrc
qrc/qrc_animations/: explosion_animation.qrc  fire_animation.qrc
qrc/qrc_main_images/: cars.qrc  maps.qrc
resources/Jsons/: map1_data.json  map2_data.json  map3_data.json  map4_data.json  map5_data.json  map6_data.json  map7_data.json  map_1_data.json  map_2_data.json  map_3_data.json  map_5_data.json  map_6_data.json
resources/images/map_data/: finish_map_2.txt  map5.txt  map6.txt  map_1.txt  map_2.txt  map_3.txt  map_4.txt
src/: car.cpp  car.h  controller.cpp  controller.h  force.cpp  force.h  main_window.cpp  main_window.h  menu.cpp  menu.h  model.cpp  model.h  view.cpp  view.h  wheel.cpp  wheel.h
src/Controller/: controller.cpp  controller.h
src/EventsController/: EventsController.cpp  EventsController.h  events_controller.cpp  events_controller.h
src/GameCore/: GameController.cpp  GameController.h  car.cpp  car.h  car_achievements.h  game_controller.cpp  game_controller.h  game_map.cpp  game_map.h  game_object.cpp  game_object.h  input_controller.cpp  input_controller.h  map.cpp  map.h  mine.cpp  mine.h  weapon_handler.cpp  weapon_handler.h  wheel.h
src/GameCore/Behaviors/: behavior.cpp  behavior.h  bot_behavior.cpp  bot_behavior.h  first_player_behavior.cpp  first_player_behavior.h  network_player_behavior.cpp  network_player_behavior.h  second_player_behavior.cpp  second_player_behavior.h
src/GameCore/CarBehavior/: behavior.h  behaviour.cpp  behaviour.h  bot_behavior.cpp  bot_behavior.h  first_player_behavior.cpp  first_player_behavior.h  input_controller.cpp  input_controller.h  second_player_behavior.cpp  second_player_behavior.h
src/GameCore/GameObjects/: animation.cpp  animation.h  bonus.cpp  bonus.h  car.cpp  car.h  game_object.cpp  game_object.h  mine.cpp  mine.h  wheel.cpp
src/Main window/: main_window.cpp  main_window.h
src/Menu/: credits.cpp  credits.h  end_game_stats.cpp  end_game_stats.h  game_mode_selector.cpp  game_mode_selector.h  image_selector.cpp  image_selector.h  image_selector_tile.cpp  image_selector_tile.h  map_selector.cpp  map_selector.h  map_selector_tile.cpp  map_selector_tile.h  menu.cpp  menu.h  pause_menu.cpp  pause_menu.h  settings.cpp  settings.h  small_exit_window.cpp  small_exit_window.h
src/Model/: car.cpp  car.h  car_physics.cpp  car_physics.h  model.cpp  model.h  wheel.h
src/Network/: network_controller.cpp  network_controller.h  network_data.h  network_helpers.h  network_player.cpp  network_player.h  network_room.cpp  network_room.h  player_tile.cpp  player_tile.h
src/Server/: main.cpp  server_controller.cpp  server_controller.h
src/View/: BrakeSound.cpp  BrakeSound.h  DriftSound.cpp  EngineSound.cpp  EngineSound.h  SoundsOfEffects.cpp  SoundsOfEffects.h  brake_sound.cpp  brake_sound.h  drift_sound.cpp  drift_sound.h  engine.cpp  engine.h  engine_sound.cpp  engine_sound.h  shooting_sound.cpp  shooting_sound.h  sounds_of_effects.cpp  sounds_of_effects.h  view.cpp  view.h  view_info_updater.cpp  view_info_updater.h
src/View/Sounds/: brake_sound.cpp  brake_sound.h  drift_sound.h  engine_sound.cpp  engine_sound.h  shooting_sound.cpp  shooting_sound.h  sound.cpp  sound.h  sounds_of_effects.cpp  sounds_of_effects.h
src/helpers/: animations_info.h  bonus.cpp  bonus.h  car_achievements.h  cars_colors.h  cars_data.cpp  cars_data.h  client_car_data_sender.cpp  client_car_data_sender.h  fonts.h  game_mode.h  game_object_states.h  json_map_parser.cpp  json_map_parser.h  json_parser.cpp  json_parser.h  line.cpp  line.h  map_data.cpp  map_data.h  menu_sizes.h  other_constants.h  parameters_for_sounds.h  physics.cpp  physics.h  pixmapIDs.h  pixmap_categories.h  pixmap_loader.cpp  pixmap_loader.h  sizes.h  styles.h  types_of_motion.h  vec2f.cpp  vec2f.h  wrapper_template.h
